<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/deksripsi"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/bmi_intro"
        android:layout_marginTop="20dp"
        android:fontFamily="raleway"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edtBerat"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edtBerat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/deksripsi"
        app:layout_constraintStart_toEndOf="@+id/berat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edtTinggi"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/edtTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/edtBerat"
        app:layout_constraintStart_toEndOf="@id/tinggi"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/berat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berat_badan"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/deksripsi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtBerat"
        app:layout_constraintBottom_toTopOf="@+id/tinggi"
        />

    <TextView
        android:id="@+id/tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi_badan"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/berat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtTinggi"
        />

    <TextView
        android:id="@+id/jenisKelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/jenis_kelamin"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtTinggi"
        app:layout_constraintTop_toBottomOf="@+id/edtTinggi">
        <RadioButton
            android:id="@+id/priaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pria" />
        <RadioButton
            android:id="@+id/wanitaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wanita" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/jenisKelamin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnReset"
        app:layout_constraintBottom_toTopOf="@id/resultBMI"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toEndOf="@+id/btnCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/resultBMI"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:id="@+id/resultBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        app:layout_constraintTop_toBottomOf="@id/resultBMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resultCategory"
        />

    <TextView
        android:id="@+id/resultCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/resultBMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>